[project]
name = "itolapi"
authors = [
    {name = "Albert Wang", email = "git@albertyw.com"},
]
description = "API for interacting with itol.embl.de"
requires-python = ">=3.7"
keywords = ["tree", "life", "compbio", "biology", "bioinformatics"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.0,<3.0",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
test = [
    # Testing
    "coverage==7.6.1",                  # Test coverage
    "ruff==0.6.2",                      # Python linting

    # Types
    "mypy==1.11.2",                     # Static typing
    "types-requests==2.32.0.20240712",  # Type stubs for requests package
]

[project.urls]
"Homepage" = "https://github.com/albertyw/itolapi"

[project.scripts]
itol = "itolapi.itol:cli"
itolexport = "itolapi.itolexport:cli"

[tool.setuptools.dynamic]
version = {attr = "itolapi.__version__.__version__"}
readme = {file = "README.md", content-type="text/markdown"}

[options.package_data]
itolapi = ["py.typed"]

[tool.ruff]
lint.select = ["E", "F", "B"]

[tool.mypy]
strict = true

[tool.coverage.run]
source = [
    ".",
]
omit = [
    ".virtualenv",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
]
